...
            Row(
              children: [
                Expanded(
                  child: _buildTextField(
                    _billingFirstNameCtrl,
                    AppLocalizations.of(context)!.checkoutFirstName,
                    required: true,
                  ),
                ),
                const SizedBox(width: 12),
                Expanded(
                  child: _buildTextField(
                    _billingLastNameCtrl,
...
