...
  Widget build(BuildContext context) {
    return Directionality(
        textDirection: GlobalData.contentDirection(),
        child:Scaffold(
      appBar: AppBar(
        centerTitle: false,
        title: CommonWidgets.getHeadingText("Address".localized(), context),
      ),
      body:  _getAddressList(widget.addressModel),
      )

    );
  }
...
